--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
+    <title>My website style guide</title>
+</head>
 <body>
-  <h1>NGUYEN HOANG AN</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <nav>
+            <ul class="breadcrumb">
+                <li class="logo">Tesfaye</li>
+                <li class="home"><a href="#">Home</a></li>
+                <li class="color"><a href="#">Color</a></li>
+                <li class="font"><a href="#">Font</a></li>
+                <li class="text_styles"><a href="#">Text Styles</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>My Website style guide</h1>
+        <section>
+            <div class="container">
+            <div class="box">
+                <h2>Color</h2>
+                <div class="color1"><p>#2D3250</p></div>
+                <div class="color2"><p >#7077A1</p></div>
+                <div class="color3"><p>#F6B17A</p></div>
+            </div>
+            <div class="box1">
+                <h2>Fonts</h2>
+                <p class="font-name">Noto serif</p>
+                <p class="font-R">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-B">The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-I">The quick brown fox jumps over the lazy dog.</p>
+            </div>
+            </div>
+            <div class="container2">
+                <div class="box2">
+                    <h2>Text styles</h2>
+                    <p class="heading-type">h1 main page heading</p>
+                    <p class="style">Font-weight:700</p>
+                    <p class="style">Font-size:50px</p>
+                    <p class="style">Font-family: Noto serif</p>
+                </div>
+                <div class="box3">
+                    <p class="heading-type">h2 sub-heading</p>
+                    <p class="style">Font-weight:700</p>
+                    <p class="style">Font-size:30px</p>
+                    <p class="style">Font-family: Noto serif</p>
+                </div>
+                <div class="box4">
+                    <p class="heading-type">p paragraph</p>
+                    <p class="style">Font-weight:400</p>
+                    <p class="style">Font-size:18px</p>
+                    <p class="style">Font-family: Noto serif</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <ul class="footer">
+            <li class="footer1">@Copyright by Nguyen Hoang An</li>
+            <li class="footer2"><a href="#">Home</a></li>
+            <li class="footer2"><a href="#">About us</a></li>
+            <li class="footer2"><a href="#">Contact</a></li>
+        </ul>
+    </footer>
 </body>
-
 </html>
